--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,14 +94,13 @@
         android:layout_marginBottom="20dp">
         <Button
             android:id="@+id/loginbtn"
-            android:layout_width="200dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Login"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/colorAccent"
-            android:fontFamily="@font/revenge"
             android:background="@drawable/button_style"
             android:layout_marginBottom="35dp">
 
