--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ccddff</color>
+    <color name="colorPrimary">#66b3ff</color>
     <color name="colorPrimaryDark">#80bfff</color>
     <color name="colorAccent">#003366</color>
 </resources>
