fourth commit by jen

--- a/app/src/main/res/layout/activity_history_transaction.xml
+++ b/app/src/main/res/layout/activity_history_transaction.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HistoryTransaction"
     android:background="@drawable/background"
-    android:textAlignment="center">
+    android:layout_gravity="center">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recylerview1"
@@ -19,7 +18,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="No booking transaction"
+        android:text="@string/no_booking_transaction"
+        android:textAlignment="center"
         android:gravity="center"
         android:id="@+id/nobook"
         android:textStyle="bold"
