--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:gravity="center"
         android:layout_marginBottom="400dp">
         <ImageView
+            android:contentDescription="@string/bluejack_kos"
             android:layout_marginTop="15dp"
             android:layout_width="300dp"
             android:layout_height="250dp"
@@ -22,81 +23,63 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:paddingLeft="60dp"
-        android:paddingRight="60dp">
+        android:paddingRight="60dp"
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <LinearLayout
+            android:orientation="horizontal"
+            android:padding="1dp"
+            android:layout_marginTop="75dp">
+
+            <EditText
+                android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="1dp"
-                android:layout_marginTop="25dp" >
+                android:hint="@string/username"
+                android:autofillHints="Username"
+                android:background="@drawable/edittext_style"
+                android:drawableStart="@drawable/user"
+                android:letterSpacing="0.1"
+                android:textSize="20sp"
+                android:inputType="text"
+                android:textColor="#fff" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="1dp"
+            android:layout_marginTop="20dp">
 
-                <EditText
-                    android:id="@+id/username"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Username"
-                    android:layout_marginLeft="15dp"
-                    android:background="@drawable/edittext_style"
-                    android:drawableLeft="@drawable/user"
-                    android:letterSpacing="0.1"
-                    android:textSize="20sp"
-                    android:inputType="text"
-                    android:textColor="#fff"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                ></LinearLayout>
-            <LinearLayout
+            <EditText
+                android:id="@+id/password"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingLeft="1dp"
-                android:layout_marginTop="25dp">
-                <!--                <ImageView-->
-                <!--                    android:layout_width="25dp"-->
-                <!--                    android:layout_height="25dp"-->
-                <!--                    android:src="@drawable/pass1"-->
-                <!--                    android:layout_gravity="center"/>-->
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="Password"
-
-                    android:layout_marginLeft="15dp"
-                    android:background="@drawable/edittext_style"
-                    android:drawableLeft="@drawable/pass1"
-                    android:inputType="textPassword"
-                    android:letterSpacing="0.1"
-                    android:textSize="20sp"
-                    android:textColor="#fff"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                ></LinearLayout>
+                android:hint="@string/password"
+                android:autofillHints="@string/password"
+                android:background="@drawable/edittext_style"
+                android:drawableStart="@drawable/pass1"
+                android:inputType="textPassword"
+                android:letterSpacing="0.1"
+                android:textSize="20sp"
+                android:textColor="#fff" />
         </LinearLayout>
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingLeft="60dp"
         android:paddingRight="60dp"
         android:orientation="vertical"
-        android:gravity="bottom"
-        android:layout_marginBottom="20dp">
+        android:gravity="bottom">
         <Button
             android:id="@+id/loginbtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login"
+            android:text="@string/login"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textSize="20sp"
@@ -111,7 +94,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Create Account ? Sign Up"
+            android:text="@string/create_account"
             android:linksClickable="true"
             android:textStyle="bold"
             android:textColor="@color/colorAccent"
