--- a/app/src/main/res/drawable/edittext_style.xml
+++ b/app/src/main/res/drawable/edittext_style.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="#b3b3ff" />
+    <solid android:color="#b3d9ff" />
     <corners android:radius="20dp"/>
 
 
