--- a/app/src/main/res/layout/activity_kos_detail.xml
+++ b/app/src/main/res/layout/activity_kos_detail.xml
@@ -3,7 +3,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:background="@drawable/background5">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,8 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:scaleType="fitXY"
-            android:src="@drawable/logo1"/>
+            android:scaleType="fitXY" />
         <TextView
             android:id="@+id/namakosdetail"
             android:layout_width="match_parent"
@@ -180,7 +179,7 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:src="@drawable/logo1"
+                android:src="@drawable/logo"
                 android:layout_centerVertical="true"
                 android:id="@+id/profile_image"
                 android:layout_marginEnd="16dp"/>
