--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/background">
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:layout_marginBottom="400dp">
+        android:layout_height="300dp"
+        android:gravity="center_horizontal">
         <ImageView
             android:contentDescription="@string/bluejack_kos"
-            android:layout_marginTop="15dp"
-            android:layout_width="300dp"
-            android:layout_height="250dp"
-            android:src="@drawable/logo1"
+            android:layout_marginTop="75dp"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:src="@drawable/logo"
             />
     </LinearLayout>
 
@@ -31,14 +29,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="1dp"
-            android:layout_marginTop="75dp">
+            android:layout_marginTop="35dp">
 
             <EditText
                 android:id="@+id/username"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/username"
-                android:autofillHints="Username"
+                android:autofillHints="@string/username"
                 android:background="@drawable/edittext_style"
                 android:drawableStart="@drawable/user"
                 android:letterSpacing="0.1"
@@ -60,7 +58,7 @@
                 android:hint="@string/password"
                 android:autofillHints="@string/password"
                 android:background="@drawable/edittext_style"
-                android:drawableStart="@drawable/pass1"
+                android:drawableStart="@drawable/pass"
                 android:inputType="textPassword"
                 android:letterSpacing="0.1"
                 android:textSize="20sp"
@@ -74,7 +72,8 @@
         android:paddingLeft="60dp"
         android:paddingRight="60dp"
         android:orientation="vertical"
-        android:gravity="bottom">
+        android:gravity="bottom"
+        android:paddingBottom="30dp">
         <Button
             android:id="@+id/loginbtn"
             android:layout_width="match_parent"
@@ -84,21 +83,21 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:textColor="@color/colorAccent"
-            android:background="@drawable/button_style"
-            android:layout_marginBottom="35dp">
+            android:background="@drawable/button_style">
 
         </Button>
         <TextView
             android:id="@+id/signuptxt"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
+            android:paddingTop="10dp"
+            android:textAlignment="center"
             android:text="@string/create_account"
             android:linksClickable="true"
             android:textStyle="bold"
             android:textColor="@color/colorAccent"
-            android:letterSpacing="0.1"/>
+            android:letterSpacing="0.1" />
 
 
     </LinearLayout>
