--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,13 +15,14 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            android:padding="10dp"
+            android:layout_gravity="center">
 
             <ImageView
                 android:contentDescription="@string/bluejack_kos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/logo1" />
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:src="@drawable/logo" />
         </LinearLayout>
 
         <LinearLayout
@@ -59,7 +60,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/password"
                     android:autofillHints="@string/password"
-                    android:drawableStart="@drawable/pass1"
+                    android:drawableStart="@drawable/pass"
                     android:background="@drawable/edittext_style"
                     android:inputType="textPassword"
                     android:letterSpacing="0.1"
@@ -121,7 +122,7 @@
                     android:ems="10"
                     android:inputType="none"
                     android:clickable="true"
-                    android:focusable="true"
+                    android:focusable="false"
                     android:autofillHints="@string/date_of_birth"
                     android:textSize="15sp"
                     android:hint="@string/date_of_birth"
@@ -157,48 +158,31 @@
                 </RadioButton>
             </RadioGroup>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="1dp"
-                android:gravity="center"
-                android:layout_marginTop="10dp">
-
-                <CheckBox
-                    android:id="@+id/checkterm"
-                    android:layout_width="30dp"
-                    android:layout_height="25dp"/>
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="#00000000"
-                    android:letterSpacing="0.1"
-                    android:textStyle="bold"
-                    android:text="@string/agree_with_terms_and_conditions"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="12sp" />
-            </LinearLayout>
+            <CheckBox
+                android:id="@+id/checkterm"
+                android:layout_width="wrap_content"
+                android:layout_height="25dp"
+                android:text="@string/agree_with_terms_and_conditions"
+                android:layout_gravity="start"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:padding="1dp"
                 android:orientation="vertical"
-                android:gravity="center">
+                android:gravity="center"
+                android:layout_marginTop="20dp">
                 <Button
                     android:id="@+id/registerbtn"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginBottom="25dp"
+                    android:layout_marginBottom="2dp"
                     android:background="@drawable/button_style"
                     android:text="@string/register"
                     android:textColor="@color/colorAccent"
                     android:textSize="20sp"
                     android:textStyle="bold">
-
                 </Button>
                 <TextView
                     android:id="@+id/signintxt"
@@ -206,6 +190,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:paddingTop="10dp"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:text="@string/already_have_account_sign_in"
