--- a/app/src/main/res/layout/kost_list_template.xml
+++ b/app/src/main/res/layout/kost_list_template.xml
@@ -11,7 +11,7 @@
     android:layout_marginRight="8dp"
     android:layout_marginBottom="4dp"
     card_view:cardCornerRadius="4dp"
-    card_view:cardBackgroundColor="#ffe6e6">
+    card_view:cardBackgroundColor="#b3d9ff">
 
     <RelativeLayout
         android:layout_width="match_parent"
